--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
-    "helmet": "^6.1.5"
+    "helmet": "^6.1.5",
+    "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "compression": "^1.7.4",
